@@ -1,5 +1,0 @@
-add_subdirectory( icons )
-
-install_files( /bin FILES siduxcc-gtk2 )
-install_files( /share/applications FILES siduxcc-gtk2.desktop )
-
