@@ -9,8 +9,9 @@ siduxcc (0.12.13) UNRELEASED; urgency=low
   * gtk2: CMakeList.txt fixed
   * debian: description of the the package siduxcc-gtk2 corrected.
   * gtk2: destroy handler added 
+  * gtk2: siduxcc folder removed
 
- -- Fabian Wuertz <xadras@sidux.com>  Sat, 07 Feb 2009 18:42:22 +0100
+ -- Fabian Wuertz <xadras@sidux.com>  Sat, 07 Feb 2009 18:44:24 +0100
 
 siduxcc (0.12.12) unstable; urgency=low
 
